syntax = "proto3";

import "ucar/nc2/stream/ncStream.proto";

option java_package = "ucar.nc2.ft.point.remote";
option java_outer_classname = "PointStreamProto";

message Location {
  double time = 1;
  double lat = 2;
  double lon = 3;
  double alt = 4;
  double nomTime = 5;
}

message PointFeature {
  Location loc = 1;
  bytes data = 3; // fixed length data
  repeated string sdata = 4; // Strings
}

message Member {
  string name = 1;
  string desc = 2;
  string units = 3;
  DataType dataType = 4;
  Section section = 5;
}

message PointFeatureCollection {
  string name = 1;
  string timeUnit = 2;
  repeated Member members = 3;
  string altUnit = 4;
}

message Station {
  string id = 1;
  double lat = 2;
  double lon = 3;
  double alt = 4;
  string desc = 5;
  string wmoId = 6;
}

message StationList {
  repeated Station stations = 1;
}

// cd <THREDDS_ROOT>/cdm/src/main/java
// protoc --proto_path=. --java_out=. ucar/nc2/ft/point/remote/pointStream.proto
// Last compiled on 2015/09/20 using Protobuf 2.6.1
